--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,8 @@ plugins {
     id 'com.android.application'
 }
 
+def lottieVersion = "3.4.0"
+
 android {
     compileSdkVersion 30
     buildToolsVersion "30.0.3"
@@ -40,4 +42,5 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.12.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
     implementation 'com.squareup.picasso:picasso:2.71828'
+    implementation "com.airbnb.android:lottie:$lottieVersion"
 }
